--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -5,12 +5,18 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.13"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.13"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.13"/>
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.13"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.13" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.13" />
   </ItemGroup>
   	<ItemGroup>
-		<ProjectReference Include="../ApplicationCore/ApplicationCore.csproj" />
-	</ItemGroup>
+  	  <None Remove="Authorization\" />
+  	</ItemGroup>
+  	<ItemGroup>
+  	  <Folder Include="Authorization\" />
+  	</ItemGroup>
+  	<ItemGroup>
+  	  <ProjectReference Include="..\applicationcore\applicationcore.csproj" />
+  	</ItemGroup>
 </Project>
