setting up db context

--- a/src/PublicApi/appsettings.Development.json
+++ b/src/PublicApi/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "ArchiveConnection": "Server=localhost;Database=archive.ArchiveDb;User=sa;Password=Docker@123;",
+        "IdentityConnection": "Server=localhost;Database=archive.AcriveIdentity;User=sa;Password=Docker@123;"
     }
-  }
 }
