--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -5,18 +5,19 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.13" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.13" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.13" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.13"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.13"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.13"/>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.13"/>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.26.0"/>
   </ItemGroup>
-  	<ItemGroup>
-  	  <None Remove="Authorization\" />
-  	</ItemGroup>
-  	<ItemGroup>
-  	  <Folder Include="Authorization\" />
-  	</ItemGroup>
-  	<ItemGroup>
-  	  <ProjectReference Include="..\applicationcore\applicationcore.csproj" />
-  	</ItemGroup>
-</Project>
+  <ItemGroup>
+    <None Remove="Authorization\"/>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Authorization\"/>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\applicationcore\applicationcore.csproj"/>
+  </ItemGroup>
+ </Project>
